--- a/Themes/main.css
+++ b/Themes/main.css
@@ -8,7 +8,7 @@
  * @invite dHaSxn3
  */
 /* IMPORT CSS */
-@import url("https://gist.githubusercontent.com/Getbricked/bc930ad01c4ad8789c6fa2a221e25807/raw/d5df1932d23c8e9a7baa87cd72a8343c8fdf7ffe/ClearVisionV7-temp.css");
+@import url("https://clearvision.github.io/ClearVision-v7/main.css");
 @import url("https://clearvision.github.io/ClearVision-v7/vencord.css");
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/ServerColumns/ServerColumns.css');
 @import url('https://fonts.googleapis.com/css2?family=Consolas');
