--- a/Utils/Friends_Only.css
+++ b/Utils/Friends_Only.css
@@ -1,6 +1,6 @@
 /* Remove all except friends */
-:where(.visual-refresh) .channel__972a0:not(.dm__972a0) .link__972a0:not([href="/channels/@me"]):not([href="/message-requests"]),
+:where(.visual-refresh) ._972a0d22c8afa7f0-channel:not(._972a0d22c8afa7f0-dm) ._972a0d22c8afa7f0-link:not([href="/channels/@me"]):not([href="/message-requests"]),
 /* Remove the dividers */
-.visual-refresh .sectionDivider__35e86 {
+.visual-refresh .e6b7699ce8339e1c-sectionDivider {
     display: none;
 }
