--- a/Utils/HideMemberList.css
+++ b/Utils/HideMemberList.css
@@ -1,9 +1,10 @@
 /* Member list span on hover (thank you Leo and Leafy for helping 🙏) */
-.membersWrap_c8ffbb {
+.c8ffbb79449f399c-membersWrap {
   position: relative;
   margin-left: -190px;
   transform: translateX(190px);
   transition: transform 0.5s ease-out;
+
   &:is(:hover, :focus-within) {
     transform: translateX(0);
     margin-left: 0;
