--- a/Utils/Hide_Activity.css
+++ b/Utils/Hide_Activity.css
@@ -1,6 +1,6 @@
 /* Hide activity header */
-.visual-refresh .membersGroup_c8ffbb:has(.headerContainer__095fe),
+.visual-refresh .c8ffbb79449f399c-membersGroup:has(._095fe51feb41b3bb-headerContainer),
 /* Hide member's activities */
-.visual-refresh .container__0f2e8 {
+.visual-refresh ._0f2e83213c878a13-container {
     display: none;
 }
