--- a/Utils/No_IgnoreUser.css
+++ b/Utils/No_IgnoreUser.css
@@ -1,3 +1,3 @@
-.visual-refresh .channel__972a0:has(.muted_bf202d) {
+.visual-refresh ._972a0d22c8afa7f0-channel:has(.bf202d63ad53e289-muted) {
     display: none;
 }
