--- a/Utils/on_hover.css
+++ b/Utils/on_hover.css
@@ -8,16 +8,17 @@
 
 .visual-refresh {
     /* list hover animations */
-    .wrapper__2ea32 .link__2ea32
+    ._2ea32c412048f708-wrapper ._2ea32c412048f708-link
     /* channels */
     ,
-    .container__91a9d
+    ._91a9d7f7e5248a56-container
     /* members */
     ,
-    .channel__972a0
+    ._972a0d22c8afa7f0-channel
     /* dms */
     ,
-    .side_b3f026 .item_b3f026
+    .aa8da23faa27393c-side .aa8da23faa27393c-item,
+    ._5126c0cd07f243a0-messageListItem
 
     /* settings */
         {
@@ -25,18 +26,18 @@
         will-change: margin-left;
     }
 
-    .wrapper__2ea32:hover .link__2ea32,
-    .side_b3f026 .item_b3f026:hover {
+    ._2ea32c412048f708-wrapper:hover ._2ea32c412048f708-link,
+    .aa8da23faa27393c-side .aa8da23faa27393c-item:hover {
         margin-left: 20px;
     }
 
-    .container__91a9d:hover,
-    .channel__972a0:hover {
+    ._91a9d7f7e5248a56-container:hover,
+    ._972a0d22c8afa7f0-channel:hover {
         margin-left: 28px;
     }
 
     /* list hover channel dot */
-    .unread__2ea32 {
+    ._2ea32c412048f708-unread {
         border-radius: 50%;
         width: 8px;
         height: 8px;
@@ -45,7 +46,11 @@
         will-change: margin-left;
     }
 
-    .wrapper__2ea32:hover .unread__2ea32 {
+    ._2ea32c412048f708-wrapper:hover ._2ea32c412048f708-unread {
+        margin-left: 12px;
+    }
+
+    ._5126c0cd07f243a0-messageListItem:hover {
         margin-left: 12px;
     }
 }
